--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,22 +1,22 @@
 .wrapper{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    /* display: flex; */
+    /* justify-content: center;
+    align-items: center; */
     height: 55em;
-    background-image: url('./webimage.png');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
+    
 
 }
 .content{
   text-align: center;
   font-size: 4em;
   color: rgb(1, 1, 83);
-  width: 10em;
-  height: 5em;
-  
+  width: 100%;
+  height: 100%;
+  background-image: url('./webimage.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
 }
 .heading1{
     margin-left: 272px;
