--- a/src/Components/Items.css
+++ b/src/Components/Items.css
@@ -1,24 +1,27 @@
 .item-grid{
     display: flex;
     flex-wrap: wrap;
-    margin: 2em auto;
+    margin: 0em auto;
+    padding: 12px 24px;
     justify-content: space-evenly;
-    /* outline: 2px solid black; */
-    width: 98%;
-    height: 40vh;
+    width: 98vw;
+    
 }
 .card-image{
     background-color: aqua;
     height: 80%;
 }
 .card{
-    width: 22%;
+    margin: 10px;
+    
+    width: 400px;
+    height: 300px;
     outline: 2px solid black;
-    height: 100%;
+   
 }
 .card-text{
     background-color: rgb(218, 218, 218);
-    height: 42px;
+    height: 40px;
     text-align: center;
     padding: 12px 24px;
 }
